allowing to set the GC and memory setting in env.sh